# centenarian-phenotype-model

./: .gitignore  .pre-commit-config.yaml  AUDIT_FIXES.md  CHANGELOG.md  CITATION.cff  LICENSE  METHODS.md  MODEL_CARD.md  Makefile  README.md  VALIDATION_PLAN.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml
centenarian_phenotype/: __init__.py  api.py  clocks.py  domains.py  longevity.py  mappers.py  naive_bayes.py  scoring.py  validation.py
centenarian_phenotype/models/: MANIFEST.sha256  longevity_baselines.yaml  survival_calibration.yaml  tier1_model.yaml  tier2_model.yaml  tier3_model.yaml
docs/: ARCHITECTURE.md  DATA_STRATEGY.md  EVIDENCE_LONGEVITY_FACTORS.md  ROADMAP.md  SOURCE_REGISTRY.md  TIER2_TIER3_EVALUATION.md  audit_report.md  data_dictionary.md  deployment.md  documentation_gaps.md  model_card_stub.md  scoring_api.md
examples/: quickstart.ipynb
models/: tier1_model.yaml  tier3_model.yaml
scripts/: README.md  make_manifest.py
scripts/analysis/: analyze_profile_delta.py  biolearn_age_harvest.py  corpus_feature_recheck.py  function_threshold_test.py  silver_control_extraction.py  smoking_snippets.py
scripts/pipeline/: dedup_news.py  extract_biomarker_cis.py  extract_biomarkers.py  extract_layer1_traits.py  meta_pool_biomarkers.py  meta_pool_strata.py  normalize_strata_names.py  promote_normalized.py  step_a_merge_sources.py  (+7 more)
tests/: test_api.py  test_clocks.py  test_longevity.py  test_mappers.py  test_model_schema.py  test_naive_bayes.py  test_scoring.py  test_validation.py  test_validation_harness.py
(+31 files in other folders)
